website/versioned_docs/version-0.2.1/reference/api.md
<!-- Code generated by gomarkdoc. DO NOT EDIT -->

# api

```go
import "github.com/Bugs5382/go-saga-orchestration/api"
```

Package api — WebSocket stream handler for the run inspector.

Auth is intentionally not enforced here; real authentication middleware should be added before production deployment. See the route comment in router.go.

Package api wires the go\-saga\-orchestration REST API. Routes: health probes \+ /api/v1/sagas.

## Constants

<a name="CodeBadRequest"></a>Error codes used in the JSON error envelope \(the \`error\` field written by WriteError\). Stable, machine\-readable identifiers shared across handlers.

```go
const (
    CodeBadRequest    = "bad_request"
    CodeNotFound      = "not_found"
    CodeInternal      = "internal"
    CodeInvalidConfig = "invalid_config"
    CodePublishFailed = "publish_failed"
    CodeUnprocessable = "unprocessable"
    CodeConflict      = "conflict"
)
```

<a name="HealthLive"></a>
## func HealthLive

```go
func HealthLive(w http.ResponseWriter, _ *http.Request)
```

HealthLive returns 200 if the process is running.

<a name="HealthReady"></a>
## func HealthReady

```go
func HealthReady(w http.ResponseWriter, _ *http.Request)
```

HealthReady returns 200 once the service is ready to serve. v1 simple: always ready after process start. Future: gate on Postgres ping \+ a "registry warm" signal.

<a name="NewRouter"></a>
## func NewRouter

```go
func NewRouter(_ store.Store, sagas *SagaHandler, signals *SignalHandler, userTasks *UserTaskHandler, registryHandler *RegistryHandler, rulesHandler *RulesHandler, triggersHandler *TriggerHandler, streamHandler *SagaStreamHandler, workflows *WorkflowHandler) *chi.Mux
```

NewRouter builds the chi router. Saga routes attach via SagaHandler; registry routes attach via RegistryHandler; rule evaluation via RulesHandler; trigger CRUD via TriggerHandler; live run inspector via SagaStreamHandler; workflow stats via WorkflowHandler.

<a name="WriteError"></a>
## func WriteError

```go
func WriteError(w http.ResponseWriter, status int, code, message string)
```

WriteError sends a structured error envelope.

<a name="WriteJSON"></a>
## func WriteJSON

```go
func WriteJSON(w http.ResponseWriter, status int, v any)
```

WriteJSON serialises v as JSON with the given status. Errors during encoding are written to the response but cannot change the already\-sent header.

<a name="AdvancePublisher"></a>
## type AdvancePublisher

AdvancePublisher abstracts the RabbitMQ publisher so handlers can be unit\-tested without a broker.

```go
type AdvancePublisher interface {
    PublishSagaAdvance(ctx context.Context, runID string) error
}
```

<a name="RegistryHandler"></a>
## type RegistryHandler

RegistryHandler serves the action\-registry REST surface.

```
POST /api/v1/registry/register — services call this on startup to
  register or refresh their action declarations.
GET  /api/v1/registry/actions   — read-only browser feed for admin/builder UIs.
```

```go
type RegistryHandler struct {
    S store.Store
}
```

<a name="NewRegistryHandler"></a>
### func NewRegistryHandler

```go
func NewRegistryHandler(s store.Store) *RegistryHandler
```

NewRegistryHandler returns a RegistryHandler backed by the given store.

<a name="RegistryHandler.List"></a>
### func \(\*RegistryHandler\) List

```go
func (h *RegistryHandler) List(w http.ResponseWriter, r *http.Request)
```

List returns the registered actions filtered by service/category/search.

```
GET /api/v1/registry/actions?service=&category=&search=
```

<a name="RegistryHandler.Register"></a>
### func \(\*RegistryHandler\) Register

```go
func (h *RegistryHandler) Register(w http.ResponseWriter, r *http.Request)
```

Register accepts a service's startup payload. Upserts each action by \(service, action\_name, version\). Idempotent — services may resend on every restart.

<a name="RulesHandler"></a>
## type RulesHandler

RulesHandler exposes the rules\-package evaluator as a sync REST API.

```go
type RulesHandler struct {
    S store.Store
}
```

<a name="NewRulesHandler"></a>
### func NewRulesHandler

```go
func NewRulesHandler(s store.Store) *RulesHandler
```

NewRulesHandler returns a RulesHandler backed by the given store.

<a name="RulesHandler.Evaluate"></a>
### func \(\*RulesHandler\) Evaluate

```go
func (h *RulesHandler) Evaluate(w http.ResponseWriter, r *http.Request)
```

Evaluate handles POST /api/v1/rules/\{rule\_id\}/evaluate. Responses:

```
200 — rule found + evaluated; body {output, audit}.
404 — rule_id not found.
400 — bad request body.
422 — rule evaluation failed (CEL compile/eval error, no_decision_row_matched).
500 — internal error.
```

<a name="SagaHandler"></a>
## type SagaHandler

SagaHandler owns the /api/v1/sagas/\* routes.

```go
type SagaHandler struct {
    // contains filtered or unexported fields
}
```

<a name="NewSagaHandler"></a>
### func NewSagaHandler

```go
func NewSagaHandler(s store.Store, p AdvancePublisher, providers ...engine.StartupVariableProvider) *SagaHandler
```

NewSagaHandler constructs the handler. Optional StartupVariableProviders are invoked at saga start to inject per\-tenant "magic" variables.

<a name="SagaHandler.Get"></a>
### func \(\*SagaHandler\) Get

```go
func (h *SagaHandler) Get(w http.ResponseWriter, r *http.Request)
```

Get handles GET /api/v1/sagas/\{id\}.

<a name="SagaHandler.List"></a>
### func \(\*SagaHandler\) List

```go
func (h *SagaHandler) List(w http.ResponseWriter, r *http.Request)
```

List handles GET /api/v1/sagas. Parses optional filter query params, calls store.ListRuns \+ store.CountRuns, returns paginated JSON.

<a name="SagaHandler.Start"></a>
### func \(\*SagaHandler\) Start

```go
func (h *SagaHandler) Start(w http.ResponseWriter, r *http.Request)
```

Start handles POST /api/v1/sagas/start. Resolves the published definition, inserts a saga\_runs row, publishes saga.advance, returns 202 with the run ID.

<a name="SagaStreamHandler"></a>
## type SagaStreamHandler

SagaStreamHandler upgrades GET /api/v1/sagas/\{run\_id\}/stream to a WebSocket. On connect: sends the current SagaRun snapshot, then tails audit.saga\_run\_events via Postgres LISTEN/NOTIFY \(channel "saga\_event\_\<run\_id\_no\_dashes\>"\). One LISTEN per connection — the per\-connection pgx Conn is acquired from a dedicated channel pool the handler holds.

Auth is intentionally not enforced today; wire real auth middleware before exposing this endpoint in production.

```go
type SagaStreamHandler struct {
    S       store.Store
    Pool    *pgxpool.Pool // for LISTEN — acquire a dedicated conn per stream
    Upgrade websocket.Upgrader
}
```

<a name="NewSagaStreamHandler"></a>
### func NewSagaStreamHandler

```go
func NewSagaStreamHandler(s store.Store, pool *pgxpool.Pool) *SagaStreamHandler
```

NewSagaStreamHandler constructs the handler.

<a name="SagaStreamHandler.Stream"></a>
### func \(\*SagaStreamHandler\) Stream

```go
func (h *SagaStreamHandler) Stream(w http.ResponseWriter, r *http.Request)
```

Stream handles GET /api/v1/sagas/\{run\_id\}/stream.

<a name="SignalHandler"></a>
## type SignalHandler

SignalHandler accepts external signals delivered to a saga.

```go
type SignalHandler struct {
    S         store.Store
    Publisher AdvancePublisher
}
```

<a name="NewSignalHandler"></a>
### func NewSignalHandler

```go
func NewSignalHandler(s store.Store, p AdvancePublisher) *SignalHandler
```

NewSignalHandler returns a SignalHandler backed by the given store and advance publisher.

<a name="SignalHandler.Post"></a>
### func \(\*SignalHandler\) Post

```go
func (h *SignalHandler) Post(w http.ResponseWriter, r *http.Request)
```

Post handles POST /api/v1/sagas/\{run\_id\}/signal/\{name\}. Responses:

```
202 — signal recorded AND matched a paused saga awaiting it (advance published).
409 — signal recorded but the run wasn't paused-and-awaiting this name.
400 — bad run_id.
404 — run not found (only when AppendSignal returns a not-found error).
500 — internal error.
```

<a name="TriggerHandler"></a>
## type TriggerHandler

TriggerHandler serves the saga\-trigger REST surface.

```
POST   /api/v1/triggers       — create
GET    /api/v1/triggers       — list (optional ?type= ?enabled=)
GET    /api/v1/triggers/{id}  — get one
DELETE /api/v1/triggers/{id}  — remove
```

```go
type TriggerHandler struct {
    S store.Store
}
```

<a name="NewTriggerHandler"></a>
### func NewTriggerHandler

```go
func NewTriggerHandler(s store.Store) *TriggerHandler
```

NewTriggerHandler constructs the handler.

<a name="TriggerHandler.Create"></a>
### func \(\*TriggerHandler\) Create

```go
func (h *TriggerHandler) Create(w http.ResponseWriter, r *http.Request)
```

Create handles POST /api/v1/triggers.

<a name="TriggerHandler.Delete"></a>
### func \(\*TriggerHandler\) Delete

```go
func (h *TriggerHandler) Delete(w http.ResponseWriter, r *http.Request)
```

Delete handles DELETE /api/v1/triggers/\{id\}. Returns 204 on success, 404 if no row exists \(mirrors the non\-idempotent pattern — store.DeleteTrigger returns ErrNotFound for missing rows\).

<a name="TriggerHandler.Get"></a>
### func \(\*TriggerHandler\) Get

```go
func (h *TriggerHandler) Get(w http.ResponseWriter, r *http.Request)
```

Get handles GET /api/v1/triggers/\{id\}.

<a name="TriggerHandler.List"></a>
### func \(\*TriggerHandler\) List

```go
func (h *TriggerHandler) List(w http.ResponseWriter, r *http.Request)
```

List handles GET /api/v1/triggers. Optional query params: ?type= ?enabled=true|false

<a name="UserTaskHandler"></a>
## type UserTaskHandler

UserTaskHandler accepts task submissions from assignees. On submit:

1. Persist the task's submitted\_at / submitted\_by / result.
2. Append a saga\_signal of name \`user\_task.\{task\_id\}.submitted\` to the run, carrying the result as the signal payload.
3. Try to consume the awaited signal; if it matches, publish saga.advance.

```go
type UserTaskHandler struct {
    S         store.Store
    Publisher AdvancePublisher
}
```

<a name="NewUserTaskHandler"></a>
### func NewUserTaskHandler

```go
func NewUserTaskHandler(s store.Store, p AdvancePublisher) *UserTaskHandler
```

NewUserTaskHandler constructs the handler.

<a name="UserTaskHandler.Submit"></a>
### func \(\*UserTaskHandler\) Submit

```go
func (h *UserTaskHandler) Submit(w http.ResponseWriter, r *http.Request)
```

Submit handles POST /api/v1/sagas/\{run\_id\}/user\_task/\{task\_id\}/submit.

<a name="WorkflowHandler"></a>
## type WorkflowHandler

WorkflowHandler owns workflow\-level aggregate routes.

```go
type WorkflowHandler struct {
    S store.Store
}
```

<a name="NewWorkflowHandler"></a>
### func NewWorkflowHandler

```go
func NewWorkflowHandler(s store.Store) *WorkflowHandler
```

NewWorkflowHandler constructs a WorkflowHandler.

<a name="WorkflowHandler.Stats"></a>
### func \(\*WorkflowHandler\) Stats

```go
func (h *WorkflowHandler) Stats(w http.ResponseWriter, r *http.Request)
```

Stats handles GET /api/v1/workflows/\{wf\_id\}/stats. Returns aggregate metrics: success\_rate\_24h, last\_run\_at, in\_flight.

Generated by [gomarkdoc](<https://github.com/princjef/gomarkdoc>)
